fix: prevent balance wrapping in asset picker

--- a/ui/components/multichain/asset-picker-amount/asset-picker-modal/index.scss
+++ b/ui/components/multichain/asset-picker-amount/asset-picker-modal/index.scss
@@ -30,6 +30,7 @@
     cursor: pointer;
     overflow-y: auto;
     max-height: 50vh;
+    white-space: nowrap;
 
     &:not(.multichain-asset-picker-list-item--selected) {
       &:hover,
